note where existing templating could go
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -240,6 +240,7 @@ You can use the following code to provide these extra elements around an existin
     <title>Astro</title>
   </head>
   <body>
+    <!-- Wrap the slot element with your existing layout templating -->
     <slot />
   </body>
 </html>
