--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -246,7 +246,7 @@ You can use the following code to provide these extra elements around an existin
 </html>
 ```
 
-You may also wish to reuse code from Gatsby's `src/components/seo.js` to include additional site meta data. Notice that Astro uses neither `<Helmet>` nor `<Header>` but instead accesses `<head>` directly. You may create and import components, even within `<head>`, to separate and organize your page content.
+You may also wish to reuse code from Gatsby's `src/components/seo.js` to include additional site meta data. Notice that Astro uses neither `<Helmet>` nor `<Header>` but instead creates `<head>` directly. You may import and use components, even within `<head>`, to separate and organize your page content.
 
 ### Migrating Pages and Posts
 
