changed code snippet -> highlighting

--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -309,7 +309,7 @@ import Card from `../../components/Card.astro`;
 
 Convert any instances of `{children}` to an Astro `<slot />`. Astro does not need to receive `{children}` as a function prop and will automatically render child content in a `<slot />`.
 
-```astro title="src/components/MyComponent" del={1-7} ins={9}
+```astro title="src/components/MyComponent" del={1-7} ins={9-11}
 export default function MyComponent(props) { 
     return (
       <div>
