--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -318,7 +318,9 @@ export default function MyComponent(props) {
     );  
 }
 
-<slot />
+<div>
+  <slot />
+</div>
 ```
 
 React components that pass multiple sets of children can be migrated to an Astro component using [named slots](/en/core-concepts/astro-components/#named-slots):
