remove named slot example

--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -323,19 +323,7 @@ export default function MyComponent(props) {
 </div>
 ```
 
-React components that pass multiple sets of children can be migrated to an Astro component using [named slots](/en/core-concepts/astro-components/#named-slots):
-
-```astro title="src/components/PageHeader.astro"
-<header>
-  <nav>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <slot name="navItems"/>
-    </ul>
-  </nav>
-	<slot/>
-</header>
-```
+React components that pass multiple sets of children can be migrated to an Astro component using [named slots](/en/core-concepts/astro-components/#named-slots). 
 
 See more about [specific `<slot />` usage in Astro](/en/core-concepts/astro-components/#slots).
 
