style object nits, to match Gatsby example

--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -394,7 +394,7 @@ See more about [local files imports with `Astro.glob()`](/en/guides/imports/#ast
 
 ### Next Styling to Astro
 
-Convert any inline style objects (`style = {{fontWeight: "bold", }}`) to inline HTML style attributes (`style="font-weight:bold;"`). Or, use an Astro `<style>` tag for scoped CSS styles.
+Convert any inline style objects (`style={{fontWeight: "bold"}}`) to inline HTML style attributes (`style="font-weight:bold;"`). Or, use an Astro `<style>` tag for scoped CSS styles.
 
 ```jsx title="src/components/Card.jsx"
 <div style={{backgroundColor: `#f4f4f4`, padding: `1em`}}>{message}</div>
