--- a/src/pages/zh-cn/guides/migrate-to-astro.mdx
+++ b/src/pages/zh-cn/guides/migrate-to-astro.mdx
@@ -26,7 +26,7 @@ Astro 提供了许多好处: 性能，简单性，以及许多你想要的功能
 
 - 使用你现有的 [CSS 样式或库](/zh-cn/guides/styling/) 包括 Taliwind。 
 
-- 使用你现有的 [Markdown/MDX 文件](/zh-cn/guides/markdown-content/)， 以及 [remark 和 rehype 插件](/zh-cn/guides/markdown-content/#configuring-markdown-and-mdx)进行配置。
+- 使用你现有的 [Markdown/MDX 文件](/zh-cn/guides/markdown-content/)， 以及 [remark 和 rehype 插件](/zh-cn/guides/markdown-content/#配置-markdown)进行配置。
 
 - 通过集成或者 API 获取[来自 CMS 的内容](/zh-cn/guides/cms/) 。
 
@@ -41,7 +41,7 @@ Astro 允许你在静态生成站点和[服务器端渲染（SSR）](/zh-cn/guid
 
 根据你现有的项目，你可能需要从不同方面进行思考：
 
-- 使用 [Astro 群岛](/zh-cn/concepts/islands/#what-is-an-astro-island)设计以避免向浏览器发送不必要的 JavaScript 。
+- 使用 [Astro 群岛](/zh-cn/concepts/islands/#什么是-astro-群岛)设计以避免向浏览器发送不必要的 JavaScript 。
 
 - 使用 [客户端 `<script>` 标签](/zh-cn/guides/client-side-scripts/) 或 [UI 框架组件](/zh-cn/core-concepts/framework-components/)提供客户端互动性。
 
