--- a/src/pages/es/getting-started.mdx
+++ b/src/pages/es/getting-started.mdx
@@ -59,7 +59,7 @@ Visita [astro.new](https://astro.new/) y elige entre una variedad de plantillas 
   </Fragment>
 </PackageManagerTabs>
 
-Nuestra [guía de instalación](/es/install/auto/) iene instrucciones completas y paso a paso para instalar Astro usando nuestro asistente CLI, crear un nuevo proyecto desde un repositorio Astro GitHub existente y para instalar Astro manualmente.
+Nuestra [guía de instalación](/es/install/auto/) tiene instrucciones completas y paso a paso para instalar Astro usando nuestro asistente CLI, como crear un nuevo proyecto desde un repositorio de GitHub y para instalar Astro manualmente.
 
 
 ## Aprende Astro
