--- a/src/pages/es/guides/deploy/vercel.mdx
+++ b/src/pages/es/guides/deploy/vercel.mdx
@@ -79,8 +79,8 @@ Una vez que tu proyecto ha sido importado y desplegado, todos los envíos subsec
 3. Cuando pregunte `Want to override the settings? [y/N]`, selecciona `N`.
 4. ¡Tu aplicación está desplegada! (p. ej. [astro.vercel.app](https://astro.vercel.app/))
 
-### Configuración de proyecto con vercel.json
+### Configuración con vercel.json
 
-Tu puedes usar `vercel.json` para sobrescribir el comportamiento predeterminado de Vercel y para configurar ajustes adicionales. Por ejemplo, es posible que desees adjuntar encabezados a las respuestas HTTP de tus despliegues.
+Puedes usar `vercel.json` para sobrescribir el comportamiento predeterminado de Vercel y para configurar ajustes adicionales. Por ejemplo, es posible que desees adjuntar encabezados a las respuestas HTTP de tus despliegues.
 
-📚 Aprende más sobre la [configuración de proyecto de Vercel](https://vercel.com/docs/configuration).
+📚 Aprende más sobre la [configuración de Vercel](https://vercel.com/docs/configuration).
