--- a/src/pages/es/guides/imports.mdx
+++ b/src/pages/es/guides/imports.mdx
@@ -87,7 +87,7 @@ import { Icon } from 'astro-icon';
 ---
 ```
 
-Si un paquete fue publicado usando un formato antiguo, Astro convertirá el paquete a ESM para que las declaraciones `import` funcionen. En algunos casos, tu necesitarás ajustar tu [configuración de `vite`](/es/reference/configuration-reference/#vite) para que funcione.
+Si un paquete fue publicado usando un formato antiguo, Astro convertirá el paquete a ESM para que las declaraciones `import` funcionen. En algunos casos, necesitarás ajustar la [configuración de `vite`](/es/reference/configuration-reference/#vite) para que funcione.
 
 :::caution
 Algunos paquetes dependen de un entorno de navegador. Los componentes de Astro se ejecutan en el servidor, por lo que importar estos paquetes en el frontmatter puede [llevarte a errores](/es/guides/troubleshooting/#document-or-window-is-not-defined).
