--- a/src/pages/es/guides/markdown-content.mdx
+++ b/src/pages/es/guides/markdown-content.mdx
@@ -447,7 +447,7 @@ export default {
 }
 ```
 
-#### Modificación programática de frontmatter
+#### Modificación programática del frontmatter
 
 Puedes agregar propiedades al frontmatter de todos tus archivos Markdown o MDX utilizando un [plugin de remark o rehype](#plugins-de-markdown).
 
@@ -465,7 +465,7 @@ Puedes agregar propiedades al frontmatter de todos tus archivos Markdown o MDX u
     :::tip
     <Since v="2.0.0" />
 
-    `data.astro.frontmatter` contiene todas las propiedades de un documento Markdown o MDX dado. Esto te permite modificar propiedades existentes del frontmatter, o calcular nuevas propiedades a partir de este frontmatter existente.
+    `data.astro.frontmatter` contiene todas las propiedades de un documento Markdown o MDX. Esto te permite modificar propiedades existentes del frontmatter, o calcular nuevas propiedades a partir de este frontmatter existente.
     :::
 
 2. Aplica este plugin a tu configuración de integración `markdown` o `mdx`:
@@ -554,7 +554,7 @@ const { minutesRead } = Astro.props.frontmatter;
 </html>
 ```
 
-### Extendiendo la config de Markdown desde MDX
+### Extendiendo la configuración de Markdown desde MDX
 
 La integración MDX de Astro extenderá [la configuración de Markdown existente de tu proyecto](/es/reference/configuration-reference/#opciones-de-markdown) por defecto. Para sobrescribir opciones individuales, puedes especificar su equivalente en tu configuración MDX.
 
