chore: minor updates to match Gatsby guide

--- a/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -20,7 +20,7 @@ Nuxt and Astro share some similarities that will help you migrate your project:
 
 - Both Nuxt and Astro are modern Javascript static-site generators with similar project file structures. Both use a `src/` folder for your project files and a special `src/pages/` folder for file-based routing. Creating and managing pages for your site should feel familiar.
 
-- Astro has [an official integration for using Vue components](/en/guides/integrations-guide/vue/) and support for NPM packages and community integrations, including several for Vue. You will be able to write Vue UI components for interactivity, and may be able to keep some or all of your existing Nuxt Vue components and dependencies.
+- Astro has [an official integration for using Vue components](/en/guides/integrations-guide/vue/) and support for NPM packages and community integrations, including Vue libraries. You will be able to write Vue UI components for interactivity, and may be able to keep some or all of your existing Nuxt Vue components and dependencies.
 
 - Astro and Nuxt both allow you to use Headless CMSs, APIs or Markdown files for data. You can continue to use your preferred authoring system, and will be able to keep your existing content.
 
@@ -34,7 +34,7 @@ When you rebuild your Nuxt site in Astro, you will notice some important differe
 
 - [Content-focus](/en/concepts/why-astro/): Astro was designed primarily for content-focused sites. While Nuxt has the capability to do content-focused sites through `@nuxt/content`, it's primarily geared towards interactive websites. This differs from Astro, which has built-in capabilities for content page generation, but may be difficult to replicate interactive components such as dashboards within.
 
-## Convert your Project
+## Convert your NuxtJS Project
 
 ### Create a new Astro project
 
@@ -98,7 +98,7 @@ Here are some tips for converting a Nuxt `.vue` component into a `.astro` compon
 
 1. Use the `<template>` of the existing NuxtJS component function as the basis for your HTML template.
 
-2. Change any [Nuxt or Vue syntax to Astro](#convert-nuxtjs-syntax-to-astro) (e.g. `<NextLink>`, `:class`, `{{variable}}`, `v-if`) or to HTML web standards.
+2. Change any [Nuxt or Vue syntax to Astro](#convert-nuxtjs-syntax-to-astro) or to HTML web standards. This includes `<NextLink>`, `:class`, `{{variable}}`, and `v-if`, for example.
 
 1. Move `<script>` JavaScript, into a "code fence" (`---`).
 
@@ -211,7 +211,7 @@ You can use the following code to provide these extra elements around an existin
 </html>
 ```
 
-You may also wish to reuse code from [your Nuxt's page's `head` property](https://nuxtjs.org/docs/configuration-glossary/configuration-head/#the-head-property) to include additional site meta data. Notice that Astro uses neither `vue-meta` nor a component's `head` property but instead accesses `<head>` directly. You may create and import components, even within `<head>`, to separate and organize your page content.
+You may also wish to reuse code from [your Nuxt's page's `head` property](https://nuxtjs.org/docs/configuration-glossary/configuration-head/#the-head-property) to include additional site meta data. Notice that Astro uses neither `vue-meta` nor a component's `head` property creates `<head>` directly. You may import and use components, even within `<head>`, to separate and organize your page content.
 
 ### Migrating Pages and Posts
 
@@ -282,6 +282,11 @@ To bind an attribute or component property in an Astro component, change this sy
 
 Convert any Nuxt `<NuxtLink to="">`components to HTML `<a href="">` tags. 
 
+```astro del={1} ins={2}
+<NuxtLink to="/blog">Blog</Link>
+<a href="/blog">Blog</a>
+```
+
 Astro does not use any special component for links, although you are welcome to build custom link components. You can then import and use this `<Link>` just as you would any other component.
 
 ```astro title="src/components/Link.astro"
@@ -293,9 +298,16 @@ const { to } = Astro.props
 
 ### Nuxt Imports to Astro
 
-If necesssary, update any file imports to reference relative file paths exactly. This can be done using [import aliases](/en/guides/typescript/#import-aliases), or by writing out a relative path in full (e.g. `../../layouts/Layout.astro`). 
+If necesssary, update any file imports to reference relative file paths exactly. This can be done using [import aliases](/en/guides/typescript/#import-aliases), or by writing out a relative path in full.
 
 Note that `.astro` and several other file types must be imported with their full file extension.
+
+```astro title="src/pages/authors/Fred.astro" ".astro"
+---
+import Card from `../../components/Card.astro`;
+---
+<Card />
+```
 
 ### Nuxt Dynamic Page Generation to Astro
 
