--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -11,7 +11,7 @@ This guide will help you migrate from Astro v1 to Astro v2.
 
 Need to upgrade an older project to v1? See our [older migration guide](https://github.com/withastro/docs/blob/aa7e4f568f418657eba297778729a8aee2a36409/src/pages/en/migrate.mdx).
 
-You can update your project's version of Astro to the latest version using your package manager. If you're using Astro integrations, you'll also want to update those to the latest version.
+You can update your project's version of Astro to the latest version using your package manager. If you're using Astro integrations, please also update those to the latest version.
 <PackageManagerTabs>
   <Fragment slot="npm">
   ```shell
@@ -46,14 +46,16 @@ This guide includes major highlights and instructions on how to handle breaking 
 
 ### Updated: Vite 4
 
-Astro v2.0 has upgraded from Vite 3 to [Vite 4](https://vitejs.dev/). We've handled most of the upgrade for you inside of Astro; however, some subtle Vite behaviors may still change between versions. Refer to the official [Vite Migration Guide](https://vitejs.dev/guide/migration.html) if you run into trouble.
+Astro v2.0 has upgraded from Vite 3 to [Vite 4](https://vitejs.dev/). We've handled most of the upgrade for you inside of Astro; however, some subtle Vite behaviors may still change between versions. 
+
+Refer to the official [Vite Migration Guide](https://vitejs.dev/guide/migration.html) if you run into trouble.
 
 
 ### Removed: `legacy.astroFlavoredMarkdown`
 
-In 1.x? Astro moved the old Astro Flavored Markdown (also sometimes called Components in Markdown) to a legacy feature. This change removes the `legacy.astroFlavoredMarkdown` option completely.
+In 1.0 Astro moved the old Astro Flavored Markdown (also known as Components in Markdown) to a legacy feature. This change removes the `legacy.astroFlavoredMarkdown` option completely.
 
-In 2.0 this feature is not available in Astro at all. We recommend [migrating to MDX](/en/guides/integrations-guide/mdx/) for those were still using this feature in 1.x.
+In 2.0 this feature is not available in Astro at all. We recommend [migrating to MDX with the integration](/en/guides/integrations-guide/mdx/) for those were still using this feature in 1.x. See our older migration guide for more about [converting existing Mardown files to MDX](https://github.com/withastro/docs/blob/aa7e4f568f418657eba297778729a8aee2a36409/src/pages/en/migrate.mdx#converting-existing-md-files-to-mdx).
 
 ### Removed: `Astro.resolve()`
 
@@ -102,7 +104,7 @@ Builds chunks into the `_astro` folder. This simplifies configuring immutable ca
 
 #### Removed: `extendDefaultPlugins`
 
-Astro 2.0 removes `markdown.extendDefaultPlugins` as applying remark and rehype plugins **no longer disables** Astro's default plugins. 
+Astro 2.0 removes `markdown.extendDefaultPlugins`. Applying remark and rehype plugins **no longer disables** Astro's default plugins, so this option is no longer needed. 
 
 GitHub-Flavored Markdown and Smartypants are now applied whether or not custom `remarkPlugins` or `rehypePlugins` are configured. (You can opt-out manually by setting [`gfm` and `smartypants`](#added-gfm-and-smartypants) to `false` in your config.)
 
@@ -141,19 +143,73 @@ export default defineConfig({
 
 ### Changed: MDX plugin configuration
 
-##### Migrate MDX's `extendPlugins` to `extendMarkdownConfig`
+#### Removed: `extendPlugins`
 
-You may have used the `extendPlugins` option to manage plugin defaults in MDX. This has been replaced by 2 flags:
+Astro 2.0 removes the `mdx.extendPlugins` option to manage plugin defaults in MDX. This has been replaced by 3 flags:
 
-- `extendMarkdownConfig` (`true` by default) to toggle Markdown config inheritance. This replaces the `extendPlugins: 'markdown'` option.
-- `gfm` (`true` by default) to toggle GitHub-Flavored Markdown in MDX. This replaces the `extendPlugins: 'defaults'` option.
+- `mdx.extendMarkdownConfig` (`true` by default) to toggle Markdown config inheritance. This replaces the `extendPlugins: 'markdown'` option.
+- `mdx.gfm` (`true` by default) to toggle GitHub-Flavored Markdown in MDX. This replaces the `extendPlugins: 'defaults'` option.
+- `mdx.smartypants` (`true` by default) to toggle SmartyPants in MDX. This replaces the `extendPlugins: 'defaults'` option.
 
+#### Added: `extendMarkdownConfig`
 
-- Support _all_ Markdown configuration options (except `drafts`) from your MDX integration config. This includes `syntaxHighlighting` and `shikiConfig` options to further customize the MDX renderer.
-- Simplify `extendDefaults` to an `extendMarkdownConfig` option. MDX options will default to their equivalent in your Markdown config. By setting `extendMarkdownConfig` to false, you can "eject" to set your own syntax highlighting, plugins, and more.
+Astro 2.0 adds the Boolean [`mdx.extendMarkdownConfig`](/en/guides/integrations-guide/mdx/#extendmarkdownconfig) option to configure whether or not MDX should inherit your Markdown configuration. This option is `true` by default, and MDX options will default to their equivalent in your Markdown config. You no longer need `extendPlugins: 'markdown'` in your configuration for this behavior.
 
+```diff
+// astro.config.mjs
+import { defineConfig } from 'astro/config';
 
+export default defineConfig({
+  mdx: {
+-   extendPlugins: markdown,
+  }
+});
+```
 
+Replace `extendPlugins: defaults` with `extendMarkdownConfig: false` and use the individual options to enable GitHub-Flavored Markdown and SmartyPants if you want to inherit only Astro's default plugins, and not any other Markdown configuration options.
+
+```diff
+// astro.config.mjs
+import { defineConfig } from 'astro/config';
+
+export default defineConfig({
+  mdx: {
+-   extendPlugins: defaults,
++   extendMarkdownConfig: false,
++   smartypants: true,
++   gfm: true,
+  }
+});
+```
+
+#### Added: More MDX config options to match Markdown
+
+Setting `extendMarkdownConfig` to false now allows you to individually set [every available Markdown configuration option](/en/reference/configuration-reference/#markdown-options) (except `drafts`) separately in your MDX integration config, including `syntaxHighlight`, `shikiConfig` and more.
+
+```astro
+// astro.config.mjs
+import { defineConfig } from 'astro/config';
+import mdx from '@astrojs/mdx';
+
+export default defineConfig({
+  markdown: {
+    syntaxHighlight: 'prism',
+    remarkPlugins: [remarkPlugin1],
+    gfm: true,
+  },
+  integrations: [
+    mdx({
+      // `syntaxHighlight` inherited from Markdown
+
+      // Markdown `remarkPlugins` ignored,
+      // only `remarkPlugin2` applied.
+      remarkPlugins: [remarkPlugin2],
+      // `gfm` overridden to `false`
+      gfm: false,
+    })
+  ]
+});
+```
 
 --------
 
