draft building chunks

--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -95,10 +95,12 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 ```
 
 ### Changed: Building chunks ???? 
-[Does this belong?]
-[#5584](https://github.com/withastro/astro/pull/5584) - builds to `assets`. This is (?) changing to `_astro`? Not done yet?
 
-Builds chunks into the `_astro` folder. This simplifies configuring immutable caching with your adapter provider as all files are now in the same `assets` folder.
+Astro 2.0 moves the location of all build output assets to a new `_astro/` folder (configurable using the `build.assets` option). Previously, these assets would end up in various places.
+
+This simplifies configuring immutable caching with your adapter provider as all files are now in the same `assets` folder.
+
+If your deployment relies on the location assets, you may need to update your caching configuration with your deployment platform.
 
 ### Changed: Markdown plugin configuration
 
