[Content collections] Add `.astro` directory setup (#2313)
* new: add `.astro` directory notes

* edit: manual instructions -> auto instructions

* edit: add `src/env.d.ts` note to `astro sync`

* edit: add type ref that's inserted

* edit: the following -> will be created

* new: add "run astro dev" instructions to getting started

Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -23,6 +23,8 @@ Content collections help organize your Markdown or MDX and type-check your front
 
 ## Getting started
 
+First, run the [`astro dev`](/en/reference/cli-reference/#astro-dev), [`astro build`](/en/reference/cli-reference/#astro-build), or [`astro sync`](/en/reference/cli-reference/#astro-sync) commands to generate types. This will make the `astro:content` module available for [querying](#querying-content-collections) and [configuring](#configuring-collections) your content collections.
+
 Content Collections are experimental. To enable this feature, set the `experimental.contentCollections` flag in your Astro config:
 
 ```js
@@ -79,7 +81,20 @@ To benefit from the full TypeScript and autocompletion features of [using schema
   </Fragment>
 </TypeScriptSettingTabs>
 
+### Set up the `.astro` directory
 
+Astro generates TypeScript types from your content collections in the `.astro` directory. These types will be updated anytime you run the [`astro dev`](/en/reference/cli-reference/#astro-dev), [`astro build`](/en/reference/cli-reference/#astro-build), or [`astro sync`](/en/reference/cli-reference/#astro-sync) commands.
+
+:::tip
+If you're using Git for version control, we recommend ignoring this generated directory by adding `.astro` to your `.gitignore`.
+:::
+
+These commands will also generate a [reference path](https://www.typescriptlang.org/docs/handbook/triple-slash-directives.html#-reference-path-) to include `.astro` types in your project. A [`src/env.d.ts` file](/en/guides/typescript/#setup) will be created for you if one does not exist, and the following will be added:
+
+```ts title="src/env.d.ts"
+// using a relative path `../` to the `.astro` directory
+/// <reference types="../.astro/types.d.ts" />
+```
 
 ## The content directory
 
