added placeholder for content folder potentially breaking

--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -235,6 +235,10 @@ This allows plugin authors to modify existing frontmatter, or compute new proper
   }
   ```
 
+### Added: `src/content/`
+
+Write stuff: if you have an existing `src/content/` folder, it will now conflict with content collections.
+
 ## Astro 2.0 Experimental Flags Removed
 
 Remove the following experimental flags from `astro.config.mjs`:
