update experimental flags

--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -256,7 +256,7 @@ In Astro v2.0, these features are no longer hidden behind an experimental flag a
 
 ### Content Collections
 
-The experimental flag `--contentCollections` has been removed. The Colletions API is now available by default in Astro. 
+The experimental flag `--experimental-contentCollections` has been removed. The Colletions API is now available by default in Astro. 
 
 See more about using [content collections in Astro](/en/guides/content-collections/).
 
@@ -270,7 +270,7 @@ To prerender a particular page, add `export const prerender = true` to your fron
 
 ### Error overlay
 
-The experimental flag `--error-overlay` has been removed. The error overlay during `astro dev` has a refreshed visual design and provides more context for your errors.
+The experimental flag `--experimental-error-overlay` has been removed. The error overlay during `astro dev` has a refreshed visual design and provides more context for your errors.
 
 
 ## Known Issues
